@@ -96,20 +96,18 @@ class GridOperator(QObject):
         # when the log checkbox is activated
         if prg_return.log:
             if prg_return.log_txt:
-                logging.info('Message {}|{} : {}'.format(prg_return.source[0],
-                            alphabet[prg_return.source[1]], prg_return.log_txt))
-                """
-                if prg_return.log_output: # False by default
-                    log = prg_return.log_output
-                """
+                logging.info('Grid: {} Message {}|{} : {}'.format(
+                            self.number + 1,
+                            prg_return.source[0],
+                            alphabet[prg_return.source[1]],
+                            prg_return.log_txt))
             else:
-                logging.info('Message {}|{} : {}'.format(prg_return.source[0],
-                            alphabet[prg_return.source[1]], prg_return.record_0))
+                logging.info('Grid: {} Message {}|{} : {}'.format(
+                            self.number + 1,
+                            prg_return.source[0],
+                            alphabet[prg_return.source[1]],
+                            prg_return.record_0))
 
-            """
-            logging.info('Output  {}|{}'.format(prg_return.source[0],
-                        alphabet[prg_return.source[1]], log))
-            """
 
 
         # when the debug button on the element is active
